<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/welc_bg" >
    <com.htq.baidu.coolnote.widget.CircleImageView
        android:id="@+id/beauty_note_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/app_icon"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/beauty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/beauty_note_icon"
        android:layout_marginTop="20dp"
        android:textColor="#fff"
        android:text="@string/app_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/beauty"
        android:textColor="#fff"
        android:text="@string/slogan"
        android:gravity="center"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:textColor="#000"
        android:text="@string/author"/>
</RelativeLayout>
