<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:textSize="20sp"
        android:text="@string/app_name" />

    <com.htq.baidu.coolnote.widget.CircleImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/app_icon" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#000"
        android:textSize="17sp"
        android:text="@string/author" />

    <TextView
        android:id="@+id/textView2"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:textColor="#000"
        android:textSize="20sp"
        android:text="关于作者：" />
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textView2" 
    android:layout_marginTop="10dp">

   <com.htq.baidu.coolnote.widget.CircleImageView
        android:id="@+id/imageView2"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:src="@mipmap/mine_avatar" />

<TextView
android:id="@+id/about_me_tv"
android:textColor="#000"
android:textSize="20sp"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_centerVertical="true"
android:layout_marginLeft="7dp"
android:layout_toRightOf="@+id/imageView2"
android:text="@string/about_me" />

    </RelativeLayout>
    </RelativeLayout>